@@ -66,13 +66,16 @@ AVRTEST_OPT (q, 0, quiet)
 AVRTEST_OPT (runtime, 0, runtime)
 
 // Whether STDIN_PORT is active
-AVRTEST_OPT (stdin, 1, stdin)
+AVRTEST_OPT (stdin,  1, stdin)
+AVRTEST_OPT (stdin=, 0, stdin_filename)
 
-// Whether STDOUT_PORT is active
-AVRTEST_OPT (stdout, 1, stdout)
+// Whether STDOUT_PORT is active, and optional filename.
+AVRTEST_OPT (stdout,  1, stdout)
+AVRTEST_OPT (stdout=, 0, stdout_filename)
 
-// Whether STDERR_PORT is active
-AVRTEST_OPT (stderr, 1, stderr)
+// Whether STDERR_PORT is active, and optional filename.
+AVRTEST_OPT (stderr,  1, stderr)
+AVRTEST_OPT (stderr=, 0, stderr_filename)
 
 // Whether avrtest_putchar (syscall 29) flushes the host's stdout.
 AVRTEST_OPT (flush, 0, flush)
